--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,11 @@ jobs:
       
       - name: Build
         run: npm run build
+        env:
+          NODE_ENV: production
+      
+      - name: Create .nojekyll file
+        run: touch out/.nojekyll
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
