--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -30,13 +30,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Build
+      - name: Build with Next.js
         run: npm run build
         env:
           NODE_ENV: production
-      
-      - name: Create .nojekyll file
-        run: touch out/.nojekyll
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
