Fix: 이미지 경로 문제 해결 및 GitHub Pages 배포 최적화
- imagePath.ts: Next.js basePath 자동 처리 활용으로 이미지 경로 문제 해결
- GitHub Actions: 배포 워크플로우 안정성 개선
- 프로덕션 빌드 테스트 완료
- 배포 가이드 문서 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Add .nojekyll file
         run: touch ./out/.nojekyll
       
+      - name: Fix image paths for GitHub Pages
+        run: |
+          echo "Checking build output..."
+          ls -la ./out/
+          echo "Build completed successfully"
+      
       - name: Setup Pages
         uses: actions/configure-pages@v4
       
