--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,30 +24,68 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'npm'
       
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          echo "Dependencies installed successfully"
+      
+      - name: Debug environment
+        run: |
+          echo "Node version: $(node --version)"
+          echo "NPM version: $(npm --version)"
+          echo "Repository: ${{ github.repository }}"
+          echo "Working directory: $(pwd)"
+          ls -la
       
       - name: Build with Next.js
-        run: npm run build
+        run: |
+          echo "Starting Next.js build..."
+          npm run build || {
+            echo "Build failed. Checking for common issues..."
+            echo "Package.json scripts:"
+            cat package.json | grep -A 10 '"scripts"'
+            echo "Next.js config:"
+            cat next.config.js
+            exit 1
+          }
         env:
           NODE_ENV: production
+          GITHUB_REPOSITORY: ${{ github.repository }}
       
       - name: Verify build output
         run: |
           echo "Checking build output..."
           if [ -d "./out" ]; then
+            echo "✅ ./out directory exists"
+            echo "📁 Contents of ./out directory:"
             ls -la ./out/
-            echo "Build completed successfully"
-            if [ -f "./out/.nojekyll" ]; then
-              echo ".nojekyll file found in output"
+            
+            # Check for essential files
+            if [ -f "./out/index.html" ]; then
+              echo "✅ index.html found"
             else
-              echo "Warning: .nojekyll file not found in output"
+              echo "❌ Error: index.html not found"
+              exit 1
             fi
+            
+            if [ -f "./out/.nojekyll" ]; then
+              echo "✅ .nojekyll file found"
+            else
+              echo "⚠️  Warning: .nojekyll file not found, creating it..."
+              touch ./out/.nojekyll
+            fi
+            
+            # Check build size
+            BUILD_SIZE=$(du -sh ./out | cut -f1)
+            echo "📊 Build size: $BUILD_SIZE"
+            echo "✅ Build completed successfully"
           else
-            echo "Error: ./out directory not found after build"
+            echo "❌ Error: ./out directory not found after build"
+            echo "📁 Current directory contents:"
+            ls -la
             exit 1
           fi
       
