--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
+    "@types/node": "20.19.23",
+    "@types/react": "18.3.26",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
     "gh-pages": "^6.3.0",
-    "postcss": "^8.4.0",
+    "postcss": "^8.5.6",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.0.0"
+    "tailwindcss": "^3.4.18",
+    "typescript": "5.9.3"
   }
 }
